// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`matches snapshots > matches default variant 1`] = `
<DocumentFragment>
  <div
    class="sc-bdnyFh sc-iCoHzw cgXDQy is-medium aje-dropdown"
  >
    <label
      class="sc-dlniIP coPbkZ aje-label aje-label"
      for="CustomSelect-:r0:-combo"
      id="CustomSelect-:r0:-label"
    >
      Custom dropdown label
    </label>
    <div
      class="sc-fujznN RVPnQ aje-combobox"
    >
      <div
        aria-controls="CustomSelect-:r0:-list"
        aria-describedby=""
        aria-expanded="false"
        aria-haspopup="listbox"
        aria-labelledby="CustomSelect-:r0:-label"
        class="sc-pNWRh iBRcVz aje-combobox__input"
        id="CustomSelect-:r0:-combo"
        role="combobox"
        tabindex="0"
      >
        <span>
          Option 1
        </span>
      </div>
      <div
        class="sc-gKAaef fgFsaX aje-popover is-full aje-popover-bottom-left"
      >
        <ul
          aria-labelledby="CustomSelect-:r0:-label"
          class="sc-kEqXeH jBtPvT aje-combobox__menu"
          id="CustomSelect-:r0:-list"
          role="listbox"
          tabindex="-1"
        >
          <li
            aria-selected="true"
            class="sc-iqAbyq RwMZH aje-combobox__option is-focused"
            role="option"
          >
            Option 1
          </li>
          <li
            aria-selected="false"
            class="sc-iqAbyq RwMZH aje-combobox__option"
            role="option"
          >
            Option 2
          </li>
        </ul>
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`matches snapshots > matches floating variant 1`] = `
<DocumentFragment>
  <div
    class="sc-bdnyFh sc-iCoHzw cgXDQy is-medium aje-dropdown--floating"
  >
    <div
      class="sc-fujznN RVPnQ aje-combobox"
    >
      <div
        class="sc-jSFipO hbyBoI"
      >
        <div
          aria-controls="CustomSelect-:r3:-list"
          aria-describedby=""
          aria-expanded="false"
          aria-haspopup="listbox"
          aria-labelledby="CustomSelect-:r3:-label"
          class="sc-pNWRh iBRcVz aje-combobox__input"
          id="CustomSelect-:r3:-combo"
          role="combobox"
          tabindex="0"
        >
          <span>
            Option 1
          </span>
        </div>
        <div
          class="sc-gKAaef fgFsaX aje-popover is-full aje-popover-bottom-left"
        >
          <ul
            aria-labelledby="CustomSelect-:r3:-label"
            class="sc-kEqXeH jBtPvT aje-combobox__menu"
            id="CustomSelect-:r3:-list"
            role="listbox"
            tabindex="-1"
          >
            <li
              aria-selected="true"
              class="sc-iqAbyq RwMZH aje-combobox__option is-focused"
              role="option"
            >
              Option 1
            </li>
            <li
              aria-selected="false"
              class="sc-iqAbyq RwMZH aje-combobox__option"
              role="option"
            >
              Option 2
            </li>
          </ul>
        </div>
        <label
          class="sc-dlniIP coPbkZ aje-label aje-label"
          for="CustomSelect-:r3:-combo"
          id="CustomSelect-:r3:-label"
        >
          Custom dropdown label
        </label>
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`matches snapshots > matches multi-select enabled 1`] = `
<DocumentFragment>
  <div
    class="sc-bdnyFh sc-iCoHzw cgXDQy is-medium aje-dropdown"
  >
    <label
      class="sc-dlniIP coPbkZ aje-label aje-label"
      for="CustomSelect-:r1:-combo"
      id="CustomSelect-:r1:-label"
    >
      Custom dropdown label
    </label>
    <div
      class="sc-fujznN RVPnQ aje-combobox"
    >
      <div
        aria-controls="CustomSelect-:r1:-list"
        aria-describedby=""
        aria-expanded="false"
        aria-haspopup="listbox"
        aria-labelledby="CustomSelect-:r1:-label"
        class="sc-pNWRh iBRcVz aje-combobox__input"
        id="CustomSelect-:r1:-combo"
        role="combobox"
        tabindex="0"
      >
        <span />
      </div>
      <div
        class="sc-gKAaef fgFsaX aje-popover is-full aje-popover-bottom-left"
      >
        <ul
          aria-labelledby="CustomSelect-:r1:-label"
          class="sc-kEqXeH jBtPvT aje-combobox__menu is-multiselect"
          id="CustomSelect-:r1:-list"
          role="listbox"
          tabindex="-1"
        >
          <li
            aria-selected="true"
            class="sc-iqAbyq RwMZH aje-combobox__option is-focused"
            role="option"
          >
            Option 1
          </li>
          <li
            aria-selected="true"
            class="sc-iqAbyq RwMZH aje-combobox__option"
            role="option"
          >
            Option 2
          </li>
        </ul>
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`matches snapshots > matches search enabled 1`] = `
<DocumentFragment>
  <div
    class="sc-bdnyFh sc-iCoHzw cgXDQy is-medium aje-dropdown"
  >
    <label
      class="sc-dlniIP coPbkZ aje-label aje-label"
      for="CustomSelect-:r2:-combo"
      id="CustomSelect-:r2:-label"
    >
      Custom dropdown label
    </label>
    <div
      class="sc-fujznN RVPnQ aje-combobox"
    >
      <div
        aria-controls="CustomSelect-:r2:-list"
        aria-describedby=""
        aria-expanded="false"
        aria-haspopup="listbox"
        aria-labelledby="CustomSelect-:r2:-label"
        class="sc-pNWRh iBRcVz aje-combobox__input"
        id="CustomSelect-:r2:-combo"
        role="combobox"
        tabindex="0"
      >
        <span>
          Option 1
        </span>
      </div>
      <div
        class="sc-gKAaef fgFsaX aje-popover is-full aje-popover-bottom-left"
      >
        <ul
          aria-labelledby="CustomSelect-:r2:-label"
          class="sc-kEqXeH jBtPvT aje-combobox__menu"
          id="CustomSelect-:r2:-list"
          role="listbox"
          tabindex="-1"
        >
          <li
            class="sc-dItHI eGvAqs aje-combobox__search"
          >
            <input
              class="sc-bqGGcD faACdV"
              type="text"
              value=""
            />
            <i
              aria-hidden="true"
              class="sc-crzpnZ doqLoL material-icons is-medium"
            >
              search
            </i>
          </li>
          <li
            aria-selected="true"
            class="sc-iqAbyq RwMZH aje-combobox__option is-focused"
            role="option"
          >
            Option 1
          </li>
          <li
            aria-selected="false"
            class="sc-iqAbyq RwMZH aje-combobox__option"
            role="option"
          >
            Option 2
          </li>
        </ul>
      </div>
    </div>
  </div>
</DocumentFragment>
`;
